--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="Theme.TestApplt" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="Theme.Eservice" parent="Theme.MaterialComponents.Light.NoActionBar">
         view_search_toolbar
         <item name="colorPrimary">@color/primaryColor</item>
         <item name="colorPrimaryVariant">@color/primaryDarkColor</item>
