--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,5 +14,22 @@
 
     </style>
 
+    <style name="SplashTheme" parent="Theme.Eservice">
+        <item name="android:windowBackground">@drawable/ll_background</item>
+        <item name="android:colorBackground">@color/white</item>
+
+        <item name="android:windowAnimationStyle">@null</item>
+    </style>
+
+
+    <style name="outlinedTextField" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="boxStrokeColor">@drawable/box_color</item>
+        <item name="boxCornerRadiusBottomEnd">15dp</item>
+        <item name="boxCornerRadiusBottomStart">15dp</item>
+        <item name="boxCornerRadiusTopEnd">15dp</item>
+        <item name="boxCornerRadiusTopStart">15dp</item>
+        <item name="android:textColorHint">@color/primaryColor</item>
+    </style>
+
 
 </resources>
