--- a/app/src/main/res/layout/fragment_education_card.xml
+++ b/app/src/main/res/layout/fragment_education_card.xml
@@ -8,6 +8,7 @@
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
+        style="@style/Widget.MaterialComponents.Toolbar.Primary"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_height="wrap_content">
