--- a/app/src/main/res/layout/view_education_plan_card.xml
+++ b/app/src/main/res/layout/view_education_plan_card.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
     android:layout_marginTop="24dp"
+    android:backgroundTint="@color/lightGreen"
     android:layout_marginEnd="16dp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
@@ -34,7 +35,8 @@
             android:layout_marginBottom="16dp"
             android:text="@string/education_program_block_title"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            android:textColor="@color/primaryColor"
+            android:textColor="@color/cardview_dark_background"
+            android:drawableTint="@color/cardview_dark_background"
             android:textSize="18sp"
             app:drawableRightCompat="@drawable/selector_expand_arrow"
             app:layout_constraintEnd_toEndOf="parent"
@@ -146,6 +148,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@color/white"
+            android:overScrollMode="never"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
