--- a/app/src/main/res/layout/item_service.xml
+++ b/app/src/main/res/layout/item_service.xml
@@ -10,8 +10,7 @@
         android:layout_height="match_parent"
         android:layout_marginHorizontal="20dp"
         style="@style/Widget.Material3.CardView.Elevated"
-        android:layout_marginBottom="20dp"
-        android:backgroundTint="@color/grayLight">
+        android:layout_marginBottom="20dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
