--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="textDark">#DE000000</color>
     <color name="gray">#dedede</color>
     <color name="grayLight">#f1ffff</color>
+    <color name="lightYellow">#50FFFF66</color>
+    <color name="lightGreen">#50339966</color>
+    <color name="lightRed">#50FF3333</color>
 </resources>
