add orders for education card

--- a/app/src/main/res/layout/fragment_education_view_pager.xml
+++ b/app/src/main/res/layout/fragment_education_view_pager.xml
@@ -61,6 +61,10 @@
                 android:id="@+id/educationCardSession"
                 layout="@layout/view_education_card_session"/>
 
+            <include
+                android:id="@+id/educationCardOrders"
+                layout="@layout/view_education_card_orders"/>
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
