--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="lightYellow">#50FFFF66</color>
     <color name="lightGreen">#50339966</color>
     <color name="lightRed">#50FF3333</color>
+    <color name="lightPurple">#509900CC</color>
 </resources>
