add pdf reader add session repository

--- a/app/src/main/res/layout/fragment_education_view_pager.xml
+++ b/app/src/main/res/layout/fragment_education_view_pager.xml
@@ -15,6 +15,33 @@
             android:paddingBottom="20dp">
 
             <com.google.android.material.card.MaterialCardView
+                android:id="@+id/scheduleCard"
+                style="@style/Widget.Material3.CardView.Elevated"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/gray"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                    android:textColor="@color/cardview_dark_background"
+                    android:textSize="20sp"
+                    android:layout_margin="16dp"
+                    app:cardCornerRadius="10dp"
+                    android:text="@string/schedule" />
+
+
+            </com.google.android.material.card.MaterialCardView>
+
+            <com.google.android.material.card.MaterialCardView
                 android:id="@+id/materialCardView"
                 style="@style/Widget.Material3.CardView.Elevated"
                 android:layout_width="0dp"
@@ -24,7 +51,7 @@
                 app:cardCornerRadius="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toBottomOf="@+id/scheduleCard">
 
                 <FrameLayout
                     android:layout_width="match_parent"
